--- a/Corporate-Landing-Page/style.css
+++ b/Corporate-Landing-Page/style.css
@@ -149,7 +149,9 @@ body, h1, h2, h3, h4, h5, h6, p, div {
 }
 
 header:before, 
-header:after {
+header:after,
+.work-together:before,
+.work-together:after {
   content: "";
   height: 100%;
 }
@@ -169,6 +171,10 @@ body {
 nav {
   font: 13px Ubuntu;
   float: right;
+}
+
+main {
+  text-align: center;
 }
 
 nav, a:hover,
@@ -283,6 +289,94 @@ li > a {
 .say-something a:hover {
   border-bottom-color: #57EFFF;
 }
+
+header > h3 {
+  font:28px Ubuntu;
+  text-transform: uppercase;
+  color: #6C7982;
+  letter-spacing: 2px;
+  margin: 25px 0px;
+}
+
+header > h5 {
+  font: 20px Ubuntu;
+  margin: 15px 0px;
+}
+
+div.logo {
+  width: 120px;
+  height: 120px;
+  margin: 0 auto;
+}
+
+.services {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.services > div {
+  width: 295px;
+  color: #6C7982;
+}
+
+.services > div > p {
+  margin-bottom: 15px;
+}
+
+.services > div > a {
+  color: #57EFFF;
+  text-decoration: none;
+}
+
+.options > header > .logo {
+  background: url('img/sprite.png') -10px 0;
+}
+
+.interfaces > header > .logo {
+  background: url('img/sprite.png') 135px 0;
+}
+
+.documentation > header > .logo {
+  background: url('img/sprite.png') 305px 0;
+}
+
+.work-together {
+  position: relative;
+  height: 60px;
+  margin-top: 40px;
+  color: #fff;
+  font: 20px Ubunto;
+  text-transform: uppercase;
+}
+
+.work-together:before {
+  position: absolute;
+  width: 100vw;
+  left: calc(-50vw + 550px);
+  z-index: -1;
+  background: #FF7978
+}
+
+.work-together > p{
+  line-height: 60px;
+  letter-spacing: 2px;
+}
+
+.work-better {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.work-better > div {
+  width: 400px;
+}
+
+
+
+
+
 
 
 
